# rln-benchmarking

./: .gitignore  Cargo.toml  README.md
resources/tree_height_10/: rln_final.zkey
src/: main.rs
